@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -253,13 +253,13 @@ public class CPF implements EphemerisFile<CPF.CPFCoordinate, CPF.CPFEphemeris> {
         /** {@inheritDoc} */
         @Override
         public AbsoluteDate getStart() {
-            return coordinates.get(0).getDate();
+            return coordinates.getFirst().getDate();
         }
 
         /** {@inheritDoc} */
         @Override
         public AbsoluteDate getStop() {
-            return coordinates.get(coordinates.size() - 1).getDate();
+            return coordinates.getLast().getDate();
         }
 
         /** {@inheritDoc} */
