@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -179,7 +179,7 @@ public abstract class AbstractGradientConverter {
             // it is the first time we need this number of parameters
             // we need to create the state
             final int freeParameters = freeStateParameters + nbParams;
-            final FieldSpacecraftState<Gradient> s0 = gStates.get(0);
+            final FieldSpacecraftState<Gradient> s0 = gStates.getFirst();
             final AbsoluteDate date = s0.getDate().toAbsoluteDate();
 
             // attitude
