@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -41,15 +41,23 @@ import org.orekit.orbits.PositionAngleType;
 import org.orekit.propagation.Propagator;
 import org.orekit.propagation.SpacecraftState;
 import org.orekit.propagation.conversion.NumericalPropagatorBuilder;
+import org.orekit.signal.AdjustableEmitterSignalTimer;
+import org.orekit.signal.SignalReceptionCondition;
 import org.orekit.time.AbsoluteDate;
 import org.orekit.time.DateComponents;
 import org.orekit.time.TimeScalesFactory;
+import org.orekit.time.clocks.QuadraticClockModel;
 import org.orekit.utils.Constants;
 import org.orekit.utils.Differentiation;
 import org.orekit.utils.IERSConventions;
 import org.orekit.utils.PVCoordinates;
 import org.orekit.utils.ParameterDriver;
 import org.orekit.utils.ParameterFunction;
+import org.orekit.utils.TimeStampedPVCoordinates;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.mockito.Mockito.mock;
 
 class AngularRaDecTest {
 
@@ -62,7 +70,7 @@ class AngularRaDecTest {
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
+                        context.createNumerical(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
                                               1.0e-6, 60.0, 0.001);
 
         // Create perfect right-ascension/declination measurements
@@ -88,6 +96,11 @@ class AngularRaDecTest {
             // Estimate the RADEC value
             final EstimatedMeasurementBase<?> estimated = measurement.estimateWithoutDerivatives(new SpacecraftState[] { state });
 
+            // Check dates
+            Assertions.assertNotEquals(state, estimated.getStates()[0]);
+            Assertions.assertTrue(state.getDate().isAfter(estimated.getParticipants()[0].getDate()));
+            Assertions.assertEquals(state.getDate(), estimated.getParticipants()[1].getDate());
+
             // Store the difference between estimated and observed values in the stats
             raDiffStat.addValue(FastMath.abs(estimated.getEstimatedValue()[0] - measurement.getObservedValue()[0]));
             decDiffStat.addValue(FastMath.abs(estimated.getEstimatedValue()[1] - measurement.getObservedValue()[1]));
@@ -101,6 +114,16 @@ class AngularRaDecTest {
         Assertions.assertEquals(0.0, decDiffStat.getStandardDeviation(), 3e-11);
     }
 
+    @Test
+    @Deprecated
+    void testGetStation() {
+        final Observer mockedObserver = mock();
+        final AngularRaDec angularRaDec = new AngularRaDec(mockedObserver, FramesFactory.getEME2000(),
+                AbsoluteDate.ARBITRARY_EPOCH, new double[2], new double[2], new double[2], new ObservableSatellite(0));
+        final GroundStation station = angularRaDec.getStation();
+        Assertions.assertNull(station);
+    }
+
     /** Test the values of the state derivatives using a numerical.
      * finite differences calculation as a reference
      */
@@ -110,7 +133,7 @@ class AngularRaDecTest {
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
+                        context.createNumerical(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
                                               1.0e-6, 60.0, 0.001);
 
         // create perfect right-ascension/declination measurements
@@ -136,7 +159,7 @@ class AngularRaDecTest {
         for (final ObservedMeasurement<?> measurement : measurements) {
 
             // parameter corresponding to station position offset
-            final GroundStation stationParameter = ((AngularRaDec) measurement).getStation();
+            final GroundStation stationParameter = (GroundStation) ((AngularRaDec) measurement).getObserver();
 
             // We intentionally propagate to a date which is close to the
             // real spacecraft state but is *not* the accurate date, by
@@ -148,8 +171,9 @@ class AngularRaDecTest {
             final AbsoluteDate datemeas  = measurement.getDate();
             SpacecraftState    state     = propagator.propagate(datemeas);
             final Vector3D     stationP  = stationParameter.getOffsetToInertial(state.getFrame(), datemeas, false).transformPosition(Vector3D.ZERO);
-            final double       meanDelay = AbstractMeasurement.signalTimeOfFlightAdjustableEmitter(state.getPVCoordinates(), stationP,
-                                                                                                   datemeas, state.getFrame());
+            final AdjustableEmitterSignalTimer signalTimeOfFlight = new AdjustableEmitterSignalTimer(state.getOrbit());
+            final SignalReceptionCondition receptionCondition = new SignalReceptionCondition(datemeas, stationP, state.getFrame());
+            final double       meanDelay = signalTimeOfFlight.computeDelay(receptionCondition, state.getDate());
 
             final AbsoluteDate date      = measurement.getDate().shiftedBy(-0.75 * meanDelay);
                                state     = propagator.propagate(date);
@@ -202,11 +226,11 @@ class AngularRaDecTest {
         Assertions.assertEquals(0.0, new Median().evaluate(RaerrorsV), 2.2e-5);
 
         // median errors on declination
-        Assertions.assertEquals(0.0, new Median().evaluate(DecerrorsP), 2.4e-11);
+        Assertions.assertEquals(0.0, new Median().evaluate(DecerrorsP), 2.2e-11);
         Assertions.assertEquals(0.0, new Median().evaluate(DecerrorsV), 9.0e-6);
 
         // Test measurement type
-        Assertions.assertEquals(AngularRaDec.MEASUREMENT_TYPE, measurements.get(0).getMeasurementType());
+        Assertions.assertEquals(AngularRaDec.MEASUREMENT_TYPE, measurements.getFirst().getMeasurementType());
     }
 
     /** Test the values of the parameters' derivatives using a numerical
@@ -218,12 +242,12 @@ class AngularRaDecTest {
         Context context = EstimationTestUtils.geoStationnaryContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
+                        context.createNumerical(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
                                               1.0e-6, 60.0, 0.001);
 
         // create perfect right-ascension/declination measurements
         for (final GroundStation station : context.stations) {
-            station.getClockOffsetDriver().setSelected(true);
+            station.getClockBiasDriver().setSelected(true);
             station.getEastOffsetDriver().setSelected(true);
             station.getNorthOffsetDriver().setSelected(true);
             station.getZenithOffsetDriver().setSelected(true);
@@ -239,7 +263,7 @@ class AngularRaDecTest {
         for (final ObservedMeasurement<?> measurement : measurements) {
 
             // parameter corresponding to station position offset
-            final GroundStation stationParameter = ((AngularRaDec) measurement).getStation();
+            final GroundStation stationParameter = (GroundStation) ((AngularRaDec) measurement).getObserver();
 
             // We intentionally propagate to a date which is close to the
             // real spacecraft state but is *not* the accurate date, by
@@ -251,8 +275,9 @@ class AngularRaDecTest {
             final AbsoluteDate    datemeas  = measurement.getDate();
             final SpacecraftState stateini  = propagator.propagate(datemeas);
             final Vector3D        stationP  = stationParameter.getOffsetToInertial(stateini.getFrame(), datemeas, false).transformPosition(Vector3D.ZERO);
-            final double          meanDelay = AbstractMeasurement.signalTimeOfFlightAdjustableEmitter(stateini.getPVCoordinates(), stationP,
-                                                                                                      datemeas, stateini.getFrame());
+            final AdjustableEmitterSignalTimer signalTimeOfFlight = new AdjustableEmitterSignalTimer(stateini.getOrbit());
+            final SignalReceptionCondition receptionCondition = new SignalReceptionCondition(datemeas, stationP, stateini.getFrame());
+            final double          meanDelay = signalTimeOfFlight.computeDelay(receptionCondition, stateini.getDate());
 
             final AbsoluteDate    date      = measurement.getDate().shiftedBy(-0.75 * meanDelay);
             final SpacecraftState state     = propagator.propagate(date);
@@ -314,10 +339,10 @@ class AngularRaDecTest {
 
         final Frame[] frames = {FramesFactory.getEME2000(), FramesFactory.getGCRF(), FramesFactory.getICRF(), FramesFactory.getTOD(false)};
         final double[][] raDec = new double[frames.length][];
+        final ObservableSatellite os = new ObservableSatellite(0);
         for (int i = 0; i < frames.length; i++) {
             // build RA-Dec with specific reference frame
-            final ObservableSatellite os = new ObservableSatellite(0);
-            final AngularRaDecBuilder builder = new AngularRaDecBuilder(null, station, frames[i],
+            final AngularRaDecBuilder builder = new AngularRaDecBuilder(station, frames[i],
                     new double[]{1., 1.}, new double[]{1., 1.}, os);
             builder.init(spacecraftState.getDate(), spacecraftState.getDate());
             final double[] moreRaDec = builder.build(spacecraftState.getDate(), new SpacecraftState[] { spacecraftState })
@@ -337,5 +362,82 @@ class AngularRaDecTest {
 
     }
 
+    @Test
+    void testParticipants() {
+        // GIVEN
+        Utils.setDataRoot("regular-data");
+        final double[] pos = {Constants.EGM96_EARTH_EQUATORIAL_RADIUS + 5e5, 1000., 0.};
+        final double[] vel = {0., 10., 0.};
+        final PVCoordinates pvCoordinates = new PVCoordinates(new Vector3D(pos[0], pos[1], pos[2]),
+                new Vector3D(vel[0], vel[1], vel[2]));
+        final AbsoluteDate epoch = new AbsoluteDate(new DateComponents(2000, 1, 1), TimeScalesFactory.getUTC());
+        final Frame gcrf = FramesFactory.getGCRF();
+        final CartesianOrbit orbit = new CartesianOrbit(pvCoordinates, gcrf, epoch, Constants.EGM96_EARTH_MU);
+        final OneAxisEllipsoid earth = new OneAxisEllipsoid(Constants.IERS2010_EARTH_EQUATORIAL_RADIUS,
+                Constants.IERS2010_EARTH_FLATTENING,
+                FramesFactory.getITRF(ITRFVersion.ITRF_2020, IERSConventions.IERS_2010, false));
+        final GeodeticPoint point = new GeodeticPoint(0., 0., 100.);
+        final TopocentricFrame baseFrame = new TopocentricFrame(earth, point, "name");
+        final GroundStation station = new GroundStation(baseFrame);
+        activateStation(station);
+        final ObservableSatellite satellite = new ObservableSatellite(0);
+        final SpacecraftState[] state = new SpacecraftState[] { new SpacecraftState(orbit) };
+        // WHEN
+        final AngularRaDec angularRaDec = new AngularRaDec(station, gcrf, epoch, new double[2],
+                new double[]{1., 1.}, new double[]{1., 1.}, satellite);
+        final EstimatedMeasurementBase<AngularRaDec> estimatedWithoutDerivatives = angularRaDec.estimateWithoutDerivatives(state);
+        // THEN
+        final EstimatedMeasurement<AngularRaDec> estimated = angularRaDec.estimate(0, 0, state);
+        assertArrayEquals(estimated.getEstimatedValue(), estimatedWithoutDerivatives.getEstimatedValue(), 1e-12);
+        final TimeStampedPVCoordinates firstParticipant = estimatedWithoutDerivatives.getParticipants()[0];
+        final TimeStampedPVCoordinates secondParticipant = estimatedWithoutDerivatives.getParticipants()[1];
+        final TimeStampedPVCoordinates expectedFirstParticipant = estimated.getParticipants()[0];
+        final TimeStampedPVCoordinates expectedSecondParticipant = estimated.getParticipants()[1];
+        assertEquals(0., expectedFirstParticipant.getDate().durationFrom(firstParticipant.getDate()), 1e-12);
+        assertEquals(expectedFirstParticipant.getPosition(), firstParticipant.getPosition());
+        assertEquals(expectedSecondParticipant.getDate(), secondParticipant.getDate());
+        assertEquals(expectedSecondParticipant.getPosition(), secondParticipant.getPosition());
+    }
+
+    @Test
+    void testClockOffset() {
+        // GIVEN
+        Utils.setDataRoot("regular-data");
+        final double[] pos = {Constants.EGM96_EARTH_EQUATORIAL_RADIUS + 5e5, 1000., 0.};
+        final double[] vel = {0., 10., 0.};
+        final PVCoordinates pvCoordinates = new PVCoordinates(new Vector3D(pos[0], pos[1], pos[2]),
+                new Vector3D(vel[0], vel[1], vel[2]));
+        final AbsoluteDate epoch = new AbsoluteDate(new DateComponents(2000, 1, 1), TimeScalesFactory.getUTC());
+        final Frame gcrf = FramesFactory.getGCRF();
+        final CartesianOrbit orbit = new CartesianOrbit(pvCoordinates, gcrf, epoch, Constants.EGM96_EARTH_MU);
+        final OneAxisEllipsoid earth = new OneAxisEllipsoid(Constants.IERS2010_EARTH_EQUATORIAL_RADIUS,
+                Constants.IERS2010_EARTH_FLATTENING,
+                FramesFactory.getITRF(ITRFVersion.ITRF_2020, IERSConventions.IERS_2010, false));
+        final GeodeticPoint point = new GeodeticPoint(0., 0., 100.);
+        final TopocentricFrame baseFrame = new TopocentricFrame(earth, point, "name");
+        final GroundStation stationWithOffset = new GroundStation(baseFrame, new QuadraticClockModel(epoch.shiftedBy(1), 1., 0., 0.));
+        activateStation(stationWithOffset);
+        final ObservableSatellite satellite = new ObservableSatellite(0);
+        final SpacecraftState[] state = new SpacecraftState[] { new SpacecraftState(orbit) };
+        // WHEN
+        final AngularRaDec angularRaDec = new AngularRaDec(stationWithOffset, gcrf, epoch, new double[2],
+                new double[]{1., 1.}, new double[]{1., 1.}, satellite);
+        final EstimatedMeasurementBase<AngularRaDec> estimated = angularRaDec.estimateWithoutDerivatives(state);
+        // THEN
+        final GroundStation stationWithoutOffset = new GroundStation(baseFrame);
+        activateStation(stationWithoutOffset);
+        final AngularRaDec otherAngularRaDec = new AngularRaDec(stationWithoutOffset, gcrf, epoch, new double[2],
+                new double[]{1., 1.}, new double[]{1., 1.}, satellite);
+        final EstimatedMeasurementBase<AngularRaDec> unexpected = otherAngularRaDec.estimateWithoutDerivatives(state);
+        assertNotEquals(unexpected.getEstimatedValue()[0], estimated.getEstimatedValue()[0]);
+        assertNotEquals(unexpected.getEstimatedValue()[1], estimated.getEstimatedValue()[1]);
+    }
+
+    private void activateStation(final GroundStation station) {
+        for (final ParameterDriver driver: station.getParametersDrivers()) {
+            driver.setReferenceDate(AbsoluteDate.ARBITRARY_EPOCH);
+        }
+
+    }
 }
 
