@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -18,40 +18,60 @@ package org.orekit.estimation.measurements;
 
 import java.util.List;
 
+import org.hipparchus.geometry.euclidean.threed.Vector3D;
 import org.hipparchus.stat.descriptive.StreamingStatistics;
 import org.hipparchus.util.FastMath;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
+import org.orekit.Utils;
+import org.orekit.bodies.GeodeticPoint;
+import org.orekit.bodies.OneAxisEllipsoid;
 import org.orekit.estimation.Context;
 import org.orekit.estimation.EstimationTestUtils;
+import org.orekit.estimation.measurements.gnss.InterSatellitesOneWayRangeRate;
 import org.orekit.estimation.measurements.modifiers.RangeRateTroposphericDelayModifier;
+import org.orekit.frames.Frame;
+import org.orekit.frames.FramesFactory;
+import org.orekit.frames.ITRFVersion;
+import org.orekit.frames.TopocentricFrame;
 import org.orekit.models.earth.troposphere.EstimatedModel;
 import org.orekit.models.earth.troposphere.GlobalMappingFunctionModel;
 import org.orekit.models.earth.troposphere.ModifiedSaastamoinenModel;
+import org.orekit.orbits.CartesianOrbit;
 import org.orekit.orbits.OrbitType;
 import org.orekit.orbits.PositionAngleType;
 import org.orekit.propagation.Propagator;
 import org.orekit.propagation.SpacecraftState;
 import org.orekit.propagation.conversion.NumericalPropagatorBuilder;
 import org.orekit.time.AbsoluteDate;
+import org.orekit.time.clocks.QuadraticClockModel;
+import org.orekit.utils.AbsolutePVCoordinates;
 import org.orekit.utils.Constants;
 import org.orekit.utils.Differentiation;
+import org.orekit.utils.IERSConventions;
+import org.orekit.utils.PVCoordinates;
 import org.orekit.utils.ParameterDriver;
 import org.orekit.utils.ParameterFunction;
+import org.orekit.utils.TimeStampedPVCoordinates;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class RangeRateTest {
+class RangeRateTest {
 
     /** Compare observed values and estimated values.
      *  Both are calculated with a different algorithm.
      *  One-way measurements.
      */
     @Test
-    public void testValuesOneWay() {
+    void testValuesOneWay() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
+                        context.createNumerical(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
                                               1.0e-6, 60.0, 0.001);
 
         // Create perfect right-ascension/declination measurements
@@ -86,7 +106,7 @@ public class RangeRateTest {
         Assertions.assertEquals(0.0, diffStat.getStandardDeviation(), 5.5e-8);
 
         // Test measurement type
-        Assertions.assertEquals(RangeRate.MEASUREMENT_TYPE, measurements.get(0).getMeasurementType());
+        Assertions.assertEquals(RangeRate.MEASUREMENT_TYPE, measurements.getFirst().getMeasurementType());
     }
 
     /** Compare observed values and estimated values.
@@ -94,12 +114,12 @@ public class RangeRateTest {
      *  Two-ways measurements.
      */
     @Test
-    public void testValuesTwoWays() {
+    void testValuesTwoWays() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
+                        context.createNumerical(OrbitType.EQUINOCTIAL, PositionAngleType.TRUE, false,
                                               1.0e-6, 60.0, 0.001);
 
         // Create perfect right-ascension/declination measurements
@@ -139,12 +159,12 @@ public class RangeRateTest {
      * One way measurements.
      */
     @Test
-    public void testStateDerivativesOneWay() {
+    void testStateDerivativesOneWay() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
+                        context.createNumerical(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
                                               1.0e-6, 60.0, 0.001);
 
         // create perfect range rate measurements
@@ -192,7 +212,7 @@ public class RangeRateTest {
             }
 
         }
-        Assertions.assertEquals(0, maxRelativeError, 8.1e-6);
+        Assertions.assertEquals(0, maxRelativeError, 1.2e-8);
 
     }
 
@@ -201,12 +221,12 @@ public class RangeRateTest {
      * Two-ways measurements.
      */
     @Test
-    public void testStateDerivativesTwoWays() {
+    void testStateDerivativesTwoWays() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
+                        context.createNumerical(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
                                               1.0e-6, 60.0, 0.001);
 
         // create perfect range rate measurements
@@ -256,7 +276,7 @@ public class RangeRateTest {
             }
 
         }
-        Assertions.assertEquals(0, maxRelativeError, 8.1e-6);
+        Assertions.assertEquals(0, maxRelativeError, 1.4e-7);
 
     }
 
@@ -265,12 +285,12 @@ public class RangeRateTest {
      * One-way measurements.
      */
     @Test
-    public void testParameterDerivativesOneWay() {
+    void testParameterDerivativesOneWay() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
+                        context.createNumerical(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
                                               1.0e-6, 60.0, 0.001);
 
         // create perfect range rate measurements
@@ -282,7 +302,7 @@ public class RangeRateTest {
         final RangeRateMeasurementCreator creator = new RangeRateMeasurementCreator(context, false, satClkDrift);
         creator.getSatellite().getClockDriftDriver().setSelected(true);
         for (final GroundStation station : context.stations) {
-            station.getClockOffsetDriver().setSelected(true);
+            station.getClockBiasDriver().setSelected(true);
             station.getClockDriftDriver().setSelected(true);
             station.getEastOffsetDriver().setSelected(true);
             station.getNorthOffsetDriver().setSelected(true);
@@ -303,7 +323,7 @@ public class RangeRateTest {
         for (final ObservedMeasurement<?> measurement : measurements) {
 
             // parameter corresponding to station position offset
-            final GroundStation stationParameter = ((RangeRate) measurement).getStation();
+            final GroundStation stationParameter = (GroundStation) ((RangeRate) measurement).getObserver();
 
             // We intentionally propagate to a date which is close to the
             // real spacecraft state but is *not* the accurate date, by
@@ -320,7 +340,7 @@ public class RangeRateTest {
                 stationParameter.getEastOffsetDriver(),
                 stationParameter.getNorthOffsetDriver(),
                 stationParameter.getZenithOffsetDriver(),
-                measurement.getSatellites().get(0).getClockDriftDriver()
+                measurement.getSatellites().getFirst().getClockDriftDriver()
             };
             for (int i = 0; i < drivers.length; ++i) {
                 final double[] gradient  = measurement.estimate(0, 0, new SpacecraftState[] { state }).getParameterDerivatives(drivers[i]);
@@ -342,7 +362,7 @@ public class RangeRateTest {
             }
 
         }
-        Assertions.assertEquals(0, maxRelativeError, 1.2e-6);
+        Assertions.assertEquals(0, maxRelativeError, 7.5e-6);
 
     }
 
@@ -351,12 +371,12 @@ public class RangeRateTest {
      * Two-ways measurements.
      */
     @Test
-    public void testParameterDerivativesTwoWays() {
+    void testParameterDerivativesTwoWays() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
+                        context.createNumerical(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
                                               1.0e-6, 60.0, 0.001);
 
         // create perfect range rate measurements
@@ -365,9 +385,9 @@ public class RangeRateTest {
             station.getClockDriftDriver().setValue(groundClockDrift);
         }
         final double satClkDrift = 3.2e-10;
-        final RangeRateMeasurementCreator creator = new RangeRateMeasurementCreator(context, false, satClkDrift);
+        final RangeRateMeasurementCreator creator = new RangeRateMeasurementCreator(context, true, satClkDrift);
         for (final GroundStation station : context.stations) {
-            station.getClockOffsetDriver().setSelected(true);
+            station.getClockBiasDriver().setSelected(true);
             station.getEastOffsetDriver().setSelected(true);
             station.getNorthOffsetDriver().setSelected(true);
             station.getZenithOffsetDriver().setSelected(true);
@@ -387,7 +407,7 @@ public class RangeRateTest {
         for (final ObservedMeasurement<?> measurement : measurements) {
 
             // parameter corresponding to station position offset
-            final GroundStation stationParameter = ((RangeRate) measurement).getStation();
+            final GroundStation stationParameter = (GroundStation) ((RangeRate) measurement).getObserver();
 
             // We intentionally propagate to a date which is close to the
             // real spacecraft state but is *not* the accurate date, by
@@ -424,7 +444,7 @@ public class RangeRateTest {
             }
 
         }
-        Assertions.assertEquals(0, maxRelativeError, 1.2e-6);
+        Assertions.assertEquals(0, maxRelativeError, 1.3e-6);
 
     }
 
@@ -433,12 +453,12 @@ public class RangeRateTest {
      * One-way measurements with modifiers (tropospheric corrections).
      */
     @Test
-    public void testStateDerivativesWithModifier() {
+    void testStateDerivativesWithModifier() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
+                        context.createNumerical(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
                                               1.0e-6, 60.0, 0.001);
 
         // create perfect range rate measurements
@@ -498,12 +518,12 @@ public class RangeRateTest {
      * One-way measurements with estimated modifiers (tropospheric corrections).
      */
     @Test
-    public void testStateDerivativesWithEstimatedModifier() {
+    void testStateDerivativesWithEstimatedModifier() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
+                        context.createNumerical(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
                                               1.0e-6, 60.0, 0.001);
 
         // create perfect range rate measurements
@@ -567,12 +587,12 @@ public class RangeRateTest {
      * One-way measurements with modifiers (tropospheric corrections).
      */
     @Test
-    public void testParameterDerivativesWithModifier() {
+    void testParameterDerivativesWithModifier() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
+                        context.createNumerical(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
                                               1.0e-6, 60.0, 0.001);
 
         // create perfect range rate measurements
@@ -584,7 +604,7 @@ public class RangeRateTest {
         final RangeRateMeasurementCreator creator = new RangeRateMeasurementCreator(context, false, satClkDrift);
         creator.getSatellite().getClockDriftDriver().setSelected(true);
         for (final GroundStation station : context.stations) {
-            station.getClockOffsetDriver().setSelected(true);
+            station.getClockBiasDriver().setSelected(true);
             station.getClockDriftDriver().setSelected(true);
             station.getEastOffsetDriver().setSelected(true);
             station.getNorthOffsetDriver().setSelected(true);
@@ -607,7 +627,7 @@ public class RangeRateTest {
             ((RangeRate) measurement).addModifier(modifier);
 
             // parameter corresponding to station position offset
-            final GroundStation stationParameter = ((RangeRate) measurement).getStation();
+            final GroundStation stationParameter = (GroundStation) ((RangeRate) measurement).getObserver();
 
             // We intentionally propagate to a date which is close to the
             // real spacecraft state but is *not* the accurate date, by
@@ -624,7 +644,7 @@ public class RangeRateTest {
                 stationParameter.getEastOffsetDriver(),
                 stationParameter.getNorthOffsetDriver(),
                 stationParameter.getZenithOffsetDriver(),
-                measurement.getSatellites().get(0).getClockDriftDriver()
+                measurement.getSatellites().getFirst().getClockDriftDriver()
             };
             for (int i = 0; i < drivers.length; ++i) {
                 final double[] gradient  = measurement.estimate(0, 0, new SpacecraftState[] { state }).getParameterDerivatives(drivers[i]);
@@ -646,7 +666,7 @@ public class RangeRateTest {
             }
 
         }
-        Assertions.assertEquals(0, maxRelativeError, 1.2e-6);
+        Assertions.assertEquals(0, maxRelativeError, 7.5e-6);
 
     }
 
@@ -655,12 +675,12 @@ public class RangeRateTest {
      * One-way measurements with estimated modifiers (tropospheric corrections).
      */
     @Test
-    public void testParameterDerivativesWithEstimatedModifier() {
+    void testParameterDerivativesWithEstimatedModifier() {
 
         Context context = EstimationTestUtils.eccentricContext("regular-data:potential:tides");
 
         final NumericalPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
+                        context.createNumerical(OrbitType.KEPLERIAN, PositionAngleType.TRUE, true,
                                               1.0e-6, 60.0, 0.001);
 
         final Propagator propagator = EstimationTestUtils.createPropagator(context.initialOrbit,
@@ -704,7 +724,7 @@ public class RangeRateTest {
             final SpacecraftState state     = propagator.propagate(date);
 
             final ParameterDriver[] drivers = new ParameterDriver[] {
-                parameters.get(0)
+                parameters.getFirst()
             };
             for (int i = 0; i < 1; ++i) {
                 final double[] gradient  = measurement.estimate(0, 0, new SpacecraftState[] { state }).getParameterDerivatives(drivers[i]);
@@ -730,6 +750,111 @@ public class RangeRateTest {
 
     }
 
+    @ParameterizedTest
+    @ValueSource(booleans = {false, true})
+    void testParticipantsField(final boolean twoWay) {
+        // GIVEN
+        Utils.setDataRoot("regular-data");
+        final double[] pos = {Constants.EGM96_EARTH_EQUATORIAL_RADIUS + 5e5, 1000., 0.};
+        final double[] vel = {0., 10., 0.};
+        final PVCoordinates pvCoordinates = new PVCoordinates(new Vector3D(pos[0], pos[1], pos[2]),
+                new Vector3D(vel[0], vel[1], vel[2]));
+        final AbsoluteDate epoch = AbsoluteDate.ARBITRARY_EPOCH;
+        final Frame gcrf = FramesFactory.getGCRF();
+        final CartesianOrbit orbit = new CartesianOrbit(pvCoordinates, gcrf, epoch, Constants.EGM96_EARTH_MU);
+        final OneAxisEllipsoid earth = new OneAxisEllipsoid(Constants.IERS2010_EARTH_EQUATORIAL_RADIUS,
+                Constants.IERS2010_EARTH_FLATTENING,
+                FramesFactory.getITRF(ITRFVersion.ITRF_2020, IERSConventions.IERS_2010, false));
+        final GeodeticPoint point = new GeodeticPoint(0., 0., 100.);
+        final TopocentricFrame baseFrame = new TopocentricFrame(earth, point, "name");
+        final GroundStation station = new GroundStation(baseFrame, new QuadraticClockModel(AbsoluteDate.JULIAN_EPOCH, 1e-2, 0, 0));
+        for (final ParameterDriver driver: station.getParametersDrivers()) {
+            driver.setReferenceDate(AbsoluteDate.ARBITRARY_EPOCH);
+        }
+        final ObservableSatellite satellite = new ObservableSatellite(0);
+        final SpacecraftState[] state = new SpacecraftState[] { new SpacecraftState(orbit) };
+        // WHEN
+        final RangeRate rangeRate = new RangeRate(station, epoch, 0., 1., 1., twoWay, satellite);
+        final EstimatedMeasurementBase<RangeRate> estimatedWithoutDerivatives = rangeRate.estimateWithoutDerivatives(state);
+        // THEN
+        final EstimatedMeasurement<RangeRate> estimated = rangeRate.estimate(0, 0, state);
+        assertEquals(estimated.getEstimatedValue()[0], estimatedWithoutDerivatives.getEstimatedValue()[0], 1e-9);
+        compareParticipants(estimated, estimatedWithoutDerivatives);
+    }
+
+    private void compareParticipants(final EstimatedMeasurementBase<RangeRate> expected, final EstimatedMeasurementBase<RangeRate> actual) {
+        final TimeStampedPVCoordinates firstParticipant = actual.getParticipants()[0];
+        final TimeStampedPVCoordinates secondParticipant = actual.getParticipants()[1];
+        final TimeStampedPVCoordinates expectedFirstParticipant = expected.getParticipants()[0];
+        final TimeStampedPVCoordinates expectedSecondParticipant = expected.getParticipants()[1];
+        final double tolerance = 1e-7;
+        assertCloseDate(expectedFirstParticipant.getDate(), firstParticipant.getDate());
+        assertArrayEquals(expectedFirstParticipant.getPosition().toArray(), firstParticipant.getPosition().toArray(), tolerance);
+        assertCloseDate(expectedSecondParticipant.getDate(), secondParticipant.getDate());
+        assertArrayEquals(expectedSecondParticipant.getPosition().toArray(), secondParticipant.getPosition().toArray(), tolerance);
+        if (expected.getObservedMeasurement().isTwoWay()) {
+            final TimeStampedPVCoordinates expectedThirdParticipant = expected.getParticipants()[2];
+            final TimeStampedPVCoordinates thirdParticipant = actual.getParticipants()[2];
+            assertCloseDate(expectedThirdParticipant.getDate(), thirdParticipant.getDate());
+            assertArrayEquals(expectedThirdParticipant.getPosition().toArray(), thirdParticipant.getPosition().toArray(), tolerance);
+        }
+    }
+
+    private void assertCloseDate(final AbsoluteDate expected, final AbsoluteDate actual) {
+        assertTrue(expected.isCloseTo(actual, 1e-11));
+    }
+
+    @Test
+    void testAgainstInterSatelliteRangeRate() {
+        // GIVEN
+        Utils.setDataRoot("regular-data");
+        final double[] pos = {Constants.EGM96_EARTH_EQUATORIAL_RADIUS + 5e5, 1000., 0.};
+        final double[] vel = {0., 10., 0.};
+        final PVCoordinates pvCoordinates = new PVCoordinates(new Vector3D(pos[0], pos[1], pos[2]),
+                new Vector3D(vel[0], vel[1], vel[2]));
+        final AbsoluteDate epoch = AbsoluteDate.ARBITRARY_EPOCH;
+        final Frame gcrf = FramesFactory.getGCRF();
+        final CartesianOrbit orbit = new CartesianOrbit(pvCoordinates, gcrf, epoch, Constants.EGM96_EARTH_MU);
+        final OneAxisEllipsoid earth = new OneAxisEllipsoid(Constants.IERS2010_EARTH_EQUATORIAL_RADIUS,
+                Constants.IERS2010_EARTH_FLATTENING,
+                FramesFactory.getITRF(ITRFVersion.ITRF_2020, IERSConventions.IERS_2010, false));
+        final GeodeticPoint point = new GeodeticPoint(-0.1, 0.1, 100.);
+        final TopocentricFrame baseFrame = new TopocentricFrame(earth, point, "name");
+        final GroundStation station = new GroundStation(baseFrame);
+        for (final ParameterDriver driver: station.getParametersDrivers()) {
+            driver.setReferenceDate(AbsoluteDate.ARBITRARY_EPOCH);
+            driver.setSelected(true);
+        }
+        station.getClockDriftDriver().setValue(-1e-4);
+        final ObservableSatellite satellite = new ObservableSatellite(0);
+        satellite.getClockBiasDriver().setReferenceDate(epoch);
+        satellite.getClockBiasDriver().setValue(0.);
+        satellite.getClockDriftDriver().setReferenceDate(epoch);
+        satellite.getClockDriftDriver().setValue(1e-3);
+        satellite.getClockDriftDriver().setSelected(true);
+        final SpacecraftState state = new SpacecraftState(orbit);
+        // WHEN
+        final RangeRate rangeRate = new RangeRate(station, epoch, 0., 1., 1., false, satellite);
+        final EstimatedMeasurement<RangeRate> estimated = rangeRate.estimate(0, 0, new SpacecraftState[] {state});
+        // THEN
+        final ObservableSatellite satellite2 = new ObservableSatellite(1);
+        satellite2.getClockDriftDriver().setReferenceDate(epoch);
+        satellite2.getClockDriftDriver().setValue(station.getClockDriftDriver().getValue());
+        satellite2.getClockBiasDriver().setReferenceDate(epoch);
+        satellite2.getClockBiasDriver().setValue(station.getClockBiasDriver().getValue());
+        satellite2.getClockDriftDriver().setSelected(true);
+        final SpacecraftState state2 = new SpacecraftState(new AbsolutePVCoordinates(orbit.getFrame(), epoch,
+                station.getPVCoordinatesProvider().getPVCoordinates(epoch, orbit.getFrame())));
+        final SpacecraftState[] states = new SpacecraftState[] { state, state2 };
+        final InterSatellitesOneWayRangeRate  interSatRangeRate = new InterSatellitesOneWayRangeRate(satellite2, satellite, epoch, 0., 1., 1.);
+        final EstimatedMeasurement<InterSatellitesOneWayRangeRate> interRangeRate = interSatRangeRate.estimate(0, 0, states);
+        assertEquals(interRangeRate.getEstimatedValue()[0], estimated.getEstimatedValue()[0], 1e0);
+        assertArrayEquals(interRangeRate.getStateDerivatives(0)[0], estimated.getStateDerivatives(0)[0], 1e-7);
+        assertArrayEquals(interRangeRate.getParameterDerivatives(satellite2.getClockDriftDriver()),
+                estimated.getParameterDerivatives(station.getClockDriftDriver()));
+        assertArrayEquals(interRangeRate.getParameterDerivatives(satellite.getClockDriftDriver()),
+                estimated.getParameterDerivatives(satellite.getClockDriftDriver()));
+    }
 }
 
 
