@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -60,7 +60,7 @@ public class AbstractConstantThrustPropulsionModelTest {
 
             @Override
             public <T extends CalculusFieldElement<T>> FieldVector3D<T> getThrustVector(T[] parameters) {
-                return new FieldVector3D<T>(parameters[0].getField(), thrustVector);
+                return new FieldVector3D<>(parameters[0].getField(), thrustVector);
             }
 
             @Override
@@ -172,9 +172,9 @@ public class AbstractConstantThrustPropulsionModelTest {
 
         // Drivers
         Assertions.assertEquals(2, drivers.size());
-        Assertions.assertEquals(name + BasicConstantThrustPropulsionModel.THRUST, drivers.get(0).getName());
+        Assertions.assertEquals(name + BasicConstantThrustPropulsionModel.THRUST, drivers.getFirst().getName());
         Assertions.assertEquals(name + BasicConstantThrustPropulsionModel.FLOW_RATE, drivers.get(1).getName());
-        Assertions.assertEquals(thrust, drivers.get(0).getValue(), 0.);
+        Assertions.assertEquals(thrust, drivers.getFirst().getValue(), 0.);
         Assertions.assertEquals(refFlowRate, drivers.get(1).getValue(), 0.);
 
         // Thrust DS
@@ -233,12 +233,12 @@ public class AbstractConstantThrustPropulsionModelTest {
       // Drivers
       Assertions.assertEquals(3, drivers.size());
       Assertions.assertEquals(name + ScaledConstantThrustPropulsionModel.THRUSTX_SCALE_FACTOR,
-              drivers.get(0).getName());
+              drivers.getFirst().getName());
       Assertions.assertEquals(name + ScaledConstantThrustPropulsionModel.THRUSTY_SCALE_FACTOR,
               drivers.get(1).getName());
       Assertions.assertEquals(name + ScaledConstantThrustPropulsionModel.THRUSTZ_SCALE_FACTOR,
               drivers.get(2).getName());
-      Assertions.assertEquals(1., drivers.get(0).getValue(), 0.);
+      Assertions.assertEquals(1., drivers.getFirst().getValue(), 0.);
       Assertions.assertEquals(1., drivers.get(1).getValue(), 0.);
       Assertions.assertEquals(1., drivers.get(2).getValue(), 0.);
 
