@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -28,6 +28,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.orekit.TestUtils;
 import org.orekit.Utils;
+import org.orekit.annotation.DefaultDataContext;
 import org.orekit.attitudes.AttitudeProvider;
 import org.orekit.attitudes.FrameAlignedProvider;
 import org.orekit.data.DataContext;
@@ -70,11 +71,14 @@ import java.util.Map;
 
 class GPSPropagatorTest {
 
+    private static DataContext context;
     private static List<GPSAlmanac> almanacs;
 
+    @DefaultDataContext
     @BeforeAll
     public static void setUpBeforeClass() {
         Utils.setDataRoot("gnss");
+        context = DataContext.getDefault();
         GNSSDate.setRolloverReference(new DateComponents(DateComponents.GPS_EPOCH, 7 * 512));
         // Get the parser to read a SEM file
         SEMParser reader = new SEMParser(null);
@@ -86,11 +90,14 @@ class GPSPropagatorTest {
 
     @Test
     void testClockCorrections() {
-        final GNSSPropagator propagator = almanacs.get(0).getPropagator();
-        propagator.addAdditionalDataProvider(new ClockCorrectionsProvider(almanacs.get(0),
-                                                                          almanacs.get(0).getCycleDuration()));
+        final GNSSPropagator propagator =
+            almanacs.getFirst().
+                getPropagator(context.getFrames().getEME2000(),
+                              context.getFrames().getITRF(IERSConventions.IERS_2010, false));
+        propagator.addAdditionalDataProvider(new ClockCorrectionsProvider(almanacs.getFirst(),
+                                                                          almanacs.getFirst().getCycleDuration()));
         // Propagate at the GPS date and one GPS cycle later
-        final AbsoluteDate date0 = almanacs.get(0).getDate();
+        final AbsoluteDate date0 = almanacs.getFirst().getDate();
         double dtRelMin = 0;
         double dtRelMax = 0;
         for (double dt = 0; dt < 0.5 * Constants.JULIAN_DAY; dt += 1.0) {
@@ -102,15 +109,17 @@ class GPSPropagatorTest {
             dtRelMax = FastMath.max(dtRelMax, corrections[1]);
             Assertions.assertEquals(0.0, corrections[2], Precision.SAFE_MIN);
         }
-        Assertions.assertEquals(0.0,        almanacs.get(0).getToc(), 1.0e-12);
+        Assertions.assertEquals(0.0,        almanacs.getFirst().getToc(), 1.0e-12);
         Assertions.assertEquals(-1.1679e-8, dtRelMin, 1.0e-12);
         Assertions.assertEquals(+1.1679e-8, dtRelMax, 1.0e-12);
     }
 
     @Test
     void testFieldClockCorrections() {
-        final FieldGPSAlmanac<Binary64> gpsAlmanac = almanacs.get(0).toField(Binary64Field.getInstance());
-        final FieldGnssPropagator<Binary64> propagator = gpsAlmanac.getPropagator();
+        final FieldGPSAlmanac<Binary64> gpsAlmanac = almanacs.getFirst().toField(Binary64Field.getInstance());
+        final FieldGnssPropagator<Binary64> propagator =
+            gpsAlmanac.getPropagator(context.getFrames().getEME2000(),
+                                     context.getFrames().getITRF(IERSConventions.IERS_2010, false));
         propagator.addAdditionalDataProvider(new FieldClockCorrectionsProvider<>(gpsAlmanac,
                                                                                   gpsAlmanac.getCycleDuration()));
         // Propagate at the GPS date and one GPS cycle later
@@ -134,12 +143,15 @@ class GPSPropagatorTest {
     @Test
     void testGPSCycle() {
         // Builds the GPSPropagator from the almanac
-        final GNSSPropagator propagator = almanacs.get(0).getPropagator(DataContext.getDefault().getFrames(),
-                Utils.defaultLaw(), FramesFactory.getEME2000(), FramesFactory.getITRF(IERSConventions.IERS_2010, false), 1521.0);
+        final GNSSPropagator propagator =
+            almanacs.getFirst().getPropagator(Utils.defaultLaw(),
+                                          context.getFrames().getEME2000(),
+                                          context.getFrames().getITRF(IERSConventions.IERS_2010, false),
+                                          1521.0);
         // Propagate at the GPS date and one GPS cycle later
-        final AbsoluteDate date0 = almanacs.get(0).getDate();
+        final AbsoluteDate date0 = almanacs.getFirst().getDate();
         final Vector3D p0 = propagator.propagateInEcef(date0).getPosition();
-        final double gpsCycleDuration = almanacs.get(0).getCycleDuration();
+        final double gpsCycleDuration = almanacs.getFirst().getCycleDuration();
         final AbsoluteDate date1 = date0.shiftedBy(gpsCycleDuration);
         final Vector3D p1 = propagator.propagateInEcef(date1).getPosition();
 
@@ -150,11 +162,13 @@ class GPSPropagatorTest {
     @Test
     void testFrames() {
         // Builds the GPSPropagator from the almanac
-        final GNSSPropagator propagator = almanacs.get(0).getPropagator();
+        final GNSSPropagator propagator = almanacs.getFirst().
+            getPropagator(context.getFrames().getEME2000(),
+                          context.getFrames().getITRF(IERSConventions.IERS_2010, true));
         Assertions.assertEquals("EME2000", propagator.getFrame().getName());
-        Assertions.assertEquals(3.986005e14, almanacs.get(0).getMu(), 1.0e6);
+        Assertions.assertEquals(3.986005e14, almanacs.getFirst().getMu(), 1.0e6);
         // Defines some date
-        final AbsoluteDate date = new AbsoluteDate(2016, 3, 3, 12, 0, 0., TimeScalesFactory.getUTC());
+        final AbsoluteDate date = new AbsoluteDate(2016, 3, 3, 12, 0, 0., context.getTimeScales().getUTC());
         // Get PVCoordinates at the date in the ECEF
         final PVCoordinates pv0 = propagator.propagateInEcef(date);
         // Get PVCoordinates at the date in the ECEF
@@ -167,7 +181,9 @@ class GPSPropagatorTest {
 
     @Test
     void testResetInitialState() {
-        final GNSSPropagator propagator = almanacs.get(0).getPropagator();
+        final GNSSPropagator propagator =
+            almanacs.getFirst().getPropagator(context.getFrames().getEME2000(),
+                                          context.getFrames().getITRF(IERSConventions.IERS_2010, false));
         final SpacecraftState old = propagator.getInitialState();
         propagator.resetInitialState(new SpacecraftState(old.getOrbit(), old.getAttitude()).withMass(old.getMass() + 1000));
         Assertions.assertEquals(old.getMass() + 1000, propagator.getInitialState().getMass(), 1.0e-9);
@@ -175,7 +191,11 @@ class GPSPropagatorTest {
 
     @Test
     void testResetIntermediateState() {
-        GNSSPropagator propagator = new GNSSPropagatorBuilder(almanacs.get(0)).build();
+        GNSSPropagator propagator =
+            new GNSSPropagatorBuilder(almanacs.getFirst(),
+                                      context.getFrames().getEME2000(),
+                                      context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
+                buildPropagator();
         final SpacecraftState old = propagator.getInitialState();
         propagator.resetIntermediateState(new SpacecraftState(old.getOrbit(), old.getAttitude()).withMass( old.getMass() + 1000),
                                           true);
@@ -187,7 +207,8 @@ class GPSPropagatorTest {
 
         List<GNSSPropagator> gpsPropagators = new ArrayList<>();
         for (final GPSAlmanac almanac : almanacs) {
-            gpsPropagators.add(almanac.getPropagator());
+            gpsPropagators.add(almanac.getPropagator(context.getFrames().getEME2000(),
+                                                     context.getFrames().getITRF(IERSConventions.IERS_2010, false)));
         }
 
         // the following map corresponds to the GPS constellation status in early 2016
@@ -312,7 +333,9 @@ class GPSPropagatorTest {
         double errorV = 0;
         double errorA = 0;
         for (final GPSAlmanac almanac : almanacs) {
-            final GNSSPropagator propagator = almanac.getPropagator();
+            final GNSSPropagator propagator =
+                almanac.getPropagator(context.getFrames().getEME2000(),
+                                      context.getFrames().getITRF(IERSConventions.IERS_2010, true));
             GNSSOrbitalElements<?> elements = propagator.getOrbitalElements();
             AbsoluteDate t0 = new GNSSDate(elements.getWeek(), elements.getTime(), SatelliteSystem.GPS).getDate();
             for (double dt = 0; dt < Constants.JULIAN_DAY; dt += 600) {
@@ -343,8 +366,9 @@ class GPSPropagatorTest {
     @Test
     void testPosition() {
         // Initial GPS orbital elements (Ref: IGS)
-        final GPSLegacyNavigationMessage goe = new GPSLegacyNavigationMessage(DataContext.getDefault().getTimeScales(),
-                                                                              SatelliteSystem.GPS);
+        final GPSLegacyNavigationMessage goe = new GPSLegacyNavigationMessage(context.getTimeScales(),
+                                                                              SatelliteSystem.GPS,
+                                                                              GPSLegacyNavigationMessage.LNAV);
         goe.setPRN(7);
         goe.setWeek(0);
         goe.setTime(288000);
@@ -367,9 +391,13 @@ class GPSPropagatorTest {
         // Date of the GPS orbital elements
         final AbsoluteDate target = goe.getDate();
         // Build the GPS propagator
-        final GNSSPropagator propagator = goe.getPropagator();
+        final GNSSPropagator propagator =
+            goe.getPropagator(context.getFrames().getEME2000(),
+                              context.getFrames().getITRF(IERSConventions.IERS_2010, true));
         // Compute the PV coordinates at the date of the GPS orbital elements
-        final PVCoordinates pv = propagator.getPVCoordinates(target, FramesFactory.getITRF(IERSConventions.IERS_2010, true));
+        final PVCoordinates pv =
+            propagator.getPVCoordinates(target,
+                                        context.getFrames().getITRF(IERSConventions.IERS_2010, true));
         // Computed position
         final Vector3D computedPos = pv.getPosition();
         // Expected position (reference from IGS file igu20484_00.sp3)
@@ -381,8 +409,9 @@ class GPSPropagatorTest {
     @Test
     void testStmAndJacobian() {
         // Initial GPS orbital elements (Ref: IGS)
-        final GPSLegacyNavigationMessage goe = new GPSLegacyNavigationMessage(DataContext.getDefault().getTimeScales(),
-                                                                              SatelliteSystem.GPS);
+        final GPSLegacyNavigationMessage goe = new GPSLegacyNavigationMessage(context.getTimeScales(),
+                                                                              SatelliteSystem.GPS,
+                                                                              GPSLegacyNavigationMessage.LNAV);
         goe.setPRN(7);
         goe.setWeek(0);
         goe.setTime(288000);
@@ -401,10 +430,12 @@ class GPSPropagatorTest {
         goe.setCrs(87.03125);
         goe.setCic(3.203749656677246E-7);
         goe.setCis(4.0978193283081055E-8);
-        GNSSPropagator propagator = goe.getPropagator();
+        GNSSPropagator propagator =
+            goe.getPropagator(context.getFrames().getEME2000(),
+                              context.getFrames().getITRF(IERSConventions.IERS_2010, false));
 
         // we want to compute the partial derivatives with respect to Crs and Crc parameters
-        Assertions.assertEquals(9, propagator.getOrbitalElements().getParameters().length);
+        Assertions.assertEquals(12, propagator.getOrbitalElements().getParameters().length);
         propagator.getOrbitalElements().getParameterDriver(CommonGnssData.RADIUS_SINE).setSelected(true);
         propagator.getOrbitalElements().getParameterDriver(CommonGnssData.RADIUS_COSINE).setSelected(true);
         final DoubleArrayDictionary initialJacobianColumns = new DoubleArrayDictionary();
@@ -414,7 +445,7 @@ class GPSPropagatorTest {
 
         // harvester sorts the columns lexicographically, and wraps them as SpanXxx##
         Assertions.assertEquals(2, harvester.getJacobiansColumnsNames().size());
-        Assertions.assertEquals("Span" + CommonGnssData.RADIUS_COSINE + "0", harvester.getJacobiansColumnsNames().get(0));
+        Assertions.assertEquals("Span" + CommonGnssData.RADIUS_COSINE + "0", harvester.getJacobiansColumnsNames().getFirst());
         Assertions.assertEquals("Span" + CommonGnssData.RADIUS_SINE   + "0", harvester.getJacobiansColumnsNames().get(1));
 
         // propagate orbit
@@ -438,14 +469,15 @@ class GPSPropagatorTest {
     @Test
     void testRebuildModel() {
 
-        final Frame            eci              = FramesFactory.getEME2000();
-        final Frame            ecef             = FramesFactory.getITRF(IERSConventions.IERS_2010, false);
+        final Frame            eci              = context.getFrames().getEME2000();
+        final Frame            ecef             = context.getFrames().getITRF(IERSConventions.IERS_2010, false);
         final double           mass             = Propagator.DEFAULT_MASS;
         final AttitudeProvider attitudeProvider = FrameAlignedProvider.of(eci);
 
         // Initial GPS orbital elements (Ref: IGS)
-        final GPSLegacyNavigationMessage goe = new GPSLegacyNavigationMessage(DataContext.getDefault().getTimeScales(),
-                                                                              SatelliteSystem.GPS);
+        final GPSLegacyNavigationMessage goe = new GPSLegacyNavigationMessage(context.getTimeScales(),
+                                                                              SatelliteSystem.GPS,
+                                                                              GPSLegacyNavigationMessage.LNAV);
         goe.setPRN(7);
         goe.setWeek(0);
         goe.setTime(288000);
@@ -464,8 +496,7 @@ class GPSPropagatorTest {
         goe.setCrs(87.03125);
         goe.setCic(3.203749656677246E-7);
         goe.setCis(4.0978193283081055E-8);
-        GNSSPropagator propagator = goe.getPropagator(DataContext.getDefault().getFrames(),
-                                                      attitudeProvider, eci, ecef, mass);
+        GNSSPropagator propagator = goe.getPropagator(attitudeProvider, eci, ecef, mass);
 
         final GNSSPropagator rebuilt = new GNSSPropagator(propagator.getInitialState(), goe,
                                                           ecef, attitudeProvider, mass);
@@ -511,7 +542,11 @@ class GPSPropagatorTest {
     @Test
     void testIssue544() {
         // Builds the GPSPropagator from the almanac
-        final GNSSPropagator propagator = new GNSSPropagatorBuilder(almanacs.get(0)).build();
+        final GNSSPropagator propagator =
+            new GNSSPropagatorBuilder(almanacs.getFirst(),
+                                      context.getFrames().getEME2000(),
+                                      context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
+                buildPropagator();
         // In order to test the issue, we voluntarily set a Double.NaN value in the date.
         final AbsoluteDate date0 = new AbsoluteDate(2010, 5, 7, 7, 50, Double.NaN, TimeScalesFactory.getUTC());
         final PVCoordinates pv0 = propagator.propagateInEcef(date0);
@@ -525,7 +560,11 @@ class GPSPropagatorTest {
     void testFieldIssue544() {
         // Builds the GPSPropagator from the almanac
         final FieldGnssPropagator<Binary64> propagator =
-            new FieldGnssPropagatorBuilder<>(almanacs.get(0).toField(Binary64Field.getInstance())).build();
+            new FieldGnssPropagator<>(almanacs.getFirst().toField(Binary64Field.getInstance()),
+                                      context.getFrames().getEME2000(),
+                                      context.getFrames().getITRF(IERSConventions.IERS_2010, false),
+                                      new FrameAlignedProvider(context.getFrames().getEME2000()),
+                                      new Binary64(Propagator.DEFAULT_MASS));
         // In order to test the issue, we voluntarily set a Double.NaN value in the date.
         final FieldAbsoluteDate<Binary64> date0 =
             new FieldAbsoluteDate<>(Binary64Field.getInstance(),
@@ -543,7 +582,11 @@ class GPSPropagatorTest {
     void testIssue949() {
         // GIVEN
         // Setup propagator
-        final GNSSPropagator propagator = new GNSSPropagatorBuilder(almanacs.get(0)).build();
+        final GNSSPropagator propagator =
+            new GNSSPropagatorBuilder(almanacs.getFirst(),
+                                      context.getFrames().getEME2000(),
+                                      context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
+                buildPropagator();
 
         // Setup additional data provider which use the initial state in its init method
         final AdditionalDataProvider<double[]> additionalDataProvider = TestUtils.getAdditionalProviderWithInit();
@@ -556,7 +599,7 @@ class GPSPropagatorTest {
 
     @Test
     void testConversion() {
-        GnssTestUtils.checkFieldConversion(almanacs.get(0));
+        GnssTestUtils.checkFieldConversion(almanacs.getFirst());
     }
 
 }
